# project_euler_hs

./: euler.cabal
src/: Problem054.hs
test/: P054Spec.hs  Spec.hs
